Fix inconsistent spacing on Recent entries

--- a/_sass/tools/_mixins.scss
+++ b/_sass/tools/_mixins.scss
@@ -55,25 +55,6 @@
 
 
 
-@function shadow-string($color1, $color2, $length){
-  $total-length: $length;
-  $string: $color1 0px 0px;
-  @while $length > 0 {
-    $mix-amount: 100 - (($length / $total-length) * 100);
-    $mixed-color: mix($color1,$color2, $mix-amount);
-    $string-addition: $length+px $length+px;
-    $string: $mixed-color $string-addition, $string;
-    $length: $length - 1;  
-  }
-  @return $string
-}
-
-@mixin longshadow($color1, $color2, $length) {  
-  text-shadow: shadow-string($color1, $color2, $length);    
-}
-
-
-
 /**
  *
  * Get mapped values
